# aether9

./: .gitignore  MANIFEST.in  README.md  RELEASE_NOTES_v3.3.0.md  REPO_SYNC_3_1_1.md  e HEAD  how v3.1.1 --stat --oneline  pyproject.toml
Downloads/aether_core/aether9_github_v3/: CONTRIBUTING.md  vm.py
github_files/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_final.md
github_files/examples/: ai_verify.a9  hello.a9  stdlib_demo.a9
phase19_repo_sync_3_2_0/: .gitignore  CHANGELOG.md  FINAL_READINESS_REPORT_3_2_0.md  MANIFEST.in  RELEASE_NOTES_3_2_0.md  REPO_SYNC_3_2_0.md  pyproject.toml  repo_sync_manifest_3_2_0.json
phase19_repo_sync_3_2_0/aether9/: __init__.py  api.py  cli.py  compiler.py  core.py  sandbox.py  signature.py  vm.py
phase19_repo_sync_3_2_0/docs/: README.md  artifact-format.md  automation-patterns.md  cli-reference.md  embedding-cookbook.md  examples.md  getting-started.md  integration-api.md  integrator-overview.md  language-reference.md  runtime-diagnostics.md  security-model.md  vm-architecture.md
phase19_repo_sync_3_2_0/examples/: README.md  ai_verification.a9  ci_validation_demo.py  control_flow.a9  embedded_runner_demo.py  export_binary_demo.a9  hello.a9  inspect_demo.a9  integration_api_demo.py  integrator_export_pipeline.py  stdlib_demo.a9  tamper_detection_demo.a9  vm_execution_demo.a9  write_read_demo.a9
phase19_repo_sync_3_2_0/planning/: README.md  compatibility-policy.md  definition-of-done.md  feature-matrix.md  feature_matrix.csv  integrator-priorities.md  milestones.md  phase-map.json  release-checklist.md  risk-register.md  scope.md
phase19_repo_sync_3_2_0/validation/: README.md  integration-benchmark-methodology.md  integration-evidence-summary.md  json-cli-contract.md  validation-checklist.md
phase19_repo_sync_3_2_0/validation/results_v2/: tampered_source.a9  validation_v2_benchmark_runs.csv  validation_v2_manifest.json  validation_v2_scenarios.json  validation_v2_summary.json
phase19_repo_sync_3_2_0/validation/tools/: run_validation_v2.py
src/aether9/: __init__.py  cli.py  repl.py  sandbox.py  transpiler.py  vm.py
tests/: test_binary_format.py  test_cli_hardening.py  test_compiler.py  test_parser.py  test_release_packaging.py  test_vm_integration.py
(+9 files in other folders)
